# BioModeler

./: .gitignore  CMakeLists.txt  README.md
BioModeler/: BioModeler.cpp  CMakeLists.txt  DebugUtilty.h  DicomRead.cpp  DicomRead.h
BioModeler/DICOM/: DcmFile.cpp  DcmFile.h  DcmTags.cpp  DcmTags.h  DebugUtilty.h  Reader.cpp  Reader.h  SingeImage.cpp  SingeImage.h
Stbi/: CMakeLists.txt  Stbi.h  StbiWrite.cpp
